--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,12 +31,15 @@
 <!-- END_HIGHLIGHT -->
       <ul>
         <li><a href="http://www.paymentdemos.com">Home</a></li>
-        <li><a href="faq">Questions</a></li>
-        <li><a href="http://www..../news">News</a></li>
-        <li><a href="http://www..../contact">Contact</a></li>
+        <li><a href="http://www.paymentdemos.com">Questions</a></li>
+        <li><a href="http://www.paymentdemos.com">News</a></li>
+        <li><a href="http://www.paymentdemos.com">Contact</a></li>
       </ul>
     </div>
     <div id="main">
+      <div id="disclaimer">
+	Please note that YOU CANNOT PURCHASE ANYTHING on this site, it is purely for the purposes of demonstrating various payment gateways & how developers can easily integrate with those gateways.
+    </div>
       <%= yield %>
     </div>
   </div>
