--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,13 @@
   font: bold smaller sans-serif;
 }
 
+#disclaimer {
+    margin-left: 17em;
+    padding: 1em;
+    background: white;
+    font: bold smaller italic sans-serif;
+}
+
 #columns {
   background: #141;
 
@@ -43,6 +50,7 @@
     margin-left: 17em;
     padding: 1em;
     background: white;
+
   }
 
 //#START:side
